# compliant-nonprehensile-pushing-manip

./: Dockerfile  README.md  docker_build.sh  docker_run.sh
pushing_reduced/: CMakeLists.txt
pushing_reduced/include/: Pushing_controller.h  Raisim_pushing.h  stb_image_write.h
pushing_reduced/input_files/: compute_orient_eight.m  eight_adjusted_40s.txt  eight_scaled_fast.txt  eight_scaled_fast_fast.txt  mpc_weights_reduced.txt  p2p.txt  p2p_20s.txt  param_reduced.txt
pushing_reduced/input_files/Trajectory/: force_reference_generation.m  p2p_planning.m  trapezoidal_vel_profile.m
pushing_reduced/pushing_output_files/: GAINS_CHOICE.txt  README.txt  gains_pid.m  legend.txt  personal_plot1.m  personal_plot2.m  personal_plot3.m  personal_plot_plane_traj.m  plot_pushing.m  plot_pushing.py  plot_pushing_tank_body_fr.m  transition_f.m
pushing_reduced/pushing_output_files/output_data/: file_actual_TCP.csv  file_box_vel.csv  file_current_control.csv  file_des_trajectory.csv  file_force_com_body.csv  file_passive_filter_state.csv
pushing_reduced/pushing_output_files/sim_loop_closure_pos_force/sim_beg_no_tank/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_loop_closure_pos_force/sim_beg_tank/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_no_loop_closure_pos_force/sim_beg_eq_no_tank/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_no_loop_closure_pos_force/sim_beg_eq_tank_cl_loop_high_fr/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_no_loop_closure_pos_force/sim_eq_beg_tank/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_no_loop_closure_pos_force/sim_eq_half_no_tank/: file_actual_TCP.csv  file_current_control.csv  file_current_state.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv  file_reference_TCP_passive.csv
pushing_reduced/pushing_output_files/sim_no_loop_closure_pos_force/sim_eq_half_tank/: file_actual_TCP.csv  (+6 more)
pushing_reduced/pushing_output_files/sim_no_obstacle_no_tank/: file_box_lin_vel.csv  file_current_control.csv  file_current_state.csv  file_force_com_body.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv
pushing_reduced/pushing_output_files/sim_obstacle_no_tank/: file_actual_TCP.csv  file_box_vel.csv  file_current_control.csv  file_current_state.csv  file_des_trajectory.csv  file_force_com_body.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv
pushing_reduced/pushing_output_files/sim_obstacle_tank/: file_actual_TCP.csv  file_box_vel.csv  file_current_state.csv  file_des_trajectory.csv  file_passive_filter_state.csv  file_reference_TCP_not_passive.csv
pushing_reduced/src/: Pushing_controller.cpp  Raisim_pushing.cpp
pushing_reduced/src/c_generated_code/: CMakeLists.txt  acados_mex_free_pushing_reduced.c  acados_mex_set_pushing_reduced.c  acados_mex_solve_pushing_reduced.c  acados_sim_solver_pushing_reduced.h  acados_sim_solver_sfunction_pushing_reduced.c  acados_solver_pushing_reduced.c  acados_solver_sfunction_pushing_reduced.c  main_pushing_reduced  main_pushing_reduced.c  make_mex_pushing_reduced.m  make_sfun.m
(+45 files in other folders)
